# HPCToolkit

./: .clang-format  .clang-format-ignore  .clang-format-include  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.yml  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  README.md  meson.build  meson.format  meson.options
.ci.predeps/: Containerfile.bare  Containerfile.cuda  Containerfile.fedora39  Containerfile.fedora40  Containerfile.intel  Containerfile.leap15  Containerfile.libintl  Containerfile.rhel8  Containerfile.rhel9  Containerfile.rocm  Containerfile.ubuntu20.04  Containerfile.ubuntu22.04  Containerfile.ubuntu24.04  ignore
.devcontainer/: .dockerignore  Dockerfile
.e4s/: e4s.yaml
ci/: cc-diagnostics.py  docs.gitlab-ci.yml  lint.gitlab-ci.yml
cmake/: FindDyninst.cmake  FindIGA.cmake  FindLibiberty.cmake  FindPerfmon2.cmake  FindROCprofiler.cmake  FindROCtracer.cmake  FindXed.cmake
doc/: meson.build
doc/developers/: meson.ini
doc/dtd/: hpc-experiment-proposal.dtd  hpc-experiment.dtd  hpc-structure.dtd  hpcprof-config.dtd
doc/man/: .editorconfig  hpcprof.rst  hpcproftt.rst  hpcrun.rst  hpcstruct.rst  hpctoolkit.rst  hpcviewer.rst  meson.build
doc/src/: conf.py  index.md  meson.build  sphinx-pdf.py  sphinx-singlefile.py
doc/src/_ext/: sphinx_depfile.py
doc/src/users/: environment-vars.md  faq.md  hpclink.md  index.md  introduction.md  known-issues.md  mpi.md  overview.md  quickstart.md  references.md
doc/src/users/effective-analysis/: effective-analysis.md
doc/src/users/gpu/: gpu.md
doc/src/users/hpcrun/: hpcrun.md
doc/src/users/hpcviewer/: hpcviewer.md
meson/: .editorconfig  decode-mpi  in-tmpdir.py  sanity.mpi.cpp  sanity.sycl.cpp
src/: meson.build
src/hpctesttool/: install  install.py  meson.build  poetry.lock.license  pyproject.toml  pytest-as-gtest.py  vendor
src/hpctesttool/hpctesttool/: __main__.py  struct_canonicalize.py  struct_match.py
src/hpctesttool/hpctesttool/formats/: __init__.py  __init_test.py  _test_util.py  _util.py  _util_test.py  base.py  base_test.py  print.py
src/hpctesttool/hpctesttool/formats/diff/: __main__.py  __main_test.py  _util.py  base.py  strict.py  strict_test.py
src/hpctesttool/hpctesttool/formats/v4/: __init__.py  __init_test.py  _test_data.py  cctdb.py  cctdb_test.py  metadb.py  metadb_test.py  profiledb.py  profiledb_test.py  tracedb.py  tracedb_test.py
src/hpctesttool/hpctesttool/match/: context.py
src/hpctesttool/hpctesttool/test/: errors.py  execution.py
src/hpctesttool/shims/ruamel.yaml.clib/: pyproject.toml
src/hpctesttool/wheels/: ruamel_yaml_clib-0.2.8-py2.py3-none-any.whl.license
subprojects/: .gitignore  (+6 more)
subprojects/md5-g72cf2cd/: .gitignore  Makefile  README.md  REUSE.toml  md5.h  meson.build
tests/hpcprof/: meson.build  tst-accuracy  tst-flags-effective
tests/hpcrun/cpu/: meson.build  simple-spin.c
tests/hpcrun/cpu/io/: example.c  meson.build  tst-io-produces-profiles  tst-io-produces-profiles-noaudit
tests/hpcrun/cpu/itimer/: meson.build  tst-cputime-produces-profiles  tst-cputime-produces-profiles-noaudit  tst-realtime-produces-profiles  tst-realtime-produces-profiles-noaudit
tests/hpcrun/cpu/memleak/: example.c  meson.build  tst-memleak-produces-profiles  tst-memleak-produces-profiles-noaudit
tests/hpcrun/cpu/papi/: meson.build  papi_check.c  tst-papi-exist
tests/hpcrun/cpu/perf/: meson.build  tst-perf-freq-group  tst-perf-freq-produces-profiles  tst-perf-freq-produces-profiles-noaudit  tst-perf-period-group  tst-perf-period-produces-profiles  tst-perf-period-produces-profiles-noaudit
tests/hpcrun/cpu/pthread-blame/: example.c  meson.build  tst-pthread-blame-produces-profiles  tst-pthread-blame-produces-profiles-noaudit
(+1248 files in other folders)
